fix: carousel spacing

--- a/assets/blocks/carousel/carousel.css
+++ b/assets/blocks/carousel/carousel.css
@@ -135,7 +135,7 @@ main .carousel-controls {
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
-  padding: 0 6px;
+  padding: 0 2px;
   z-index: 3;
 }
 
@@ -223,7 +223,7 @@ main .carousel.carousel-cards .carousel-slide .slide-card-icon svg {
 }
 
 @media (min-width: 768px) {
-  main .carousel-slides > div {
+  main .carousel.carousel-cards .carousel-slides > div {
     width: calc(100% - 30px);
     margin: auto;
   }
@@ -244,9 +244,8 @@ main .carousel.carousel-cards .carousel-slide .slide-card-icon svg {
 }
 
 @media (min-width: 992px) {
-  main .carousel-slides > div {
+  main .carousel.carousel-cards .carousel-slides > div {
     width: calc(100% - 60px);
-    margin: auto;
   }
 
   main .carousel.carousel-cards .carousel-slide {
